Added some memory to the surefire plugin expecting to pass the release successfully
git-svn-id: https://svn.apache.org/repos/asf/directory/shared/trunk@1766636 13f79535-47bb-0310-9956-ffa450edef68