@@ -278,6 +278,9 @@
               <artifactId>maven-surefire-report-plugin</artifactId>
               <configuration>
                 <aggregate>true</aggregate>
+               <forkCount>3</forkCount>
+               <reuseForks>true</reuseForks>
+               <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
               </configuration>
             </plugin>
       
